arkts_static_test/03_Types/ets_cases/3.6.4_Type_boolean/compile-pass/TYP_03_06_04_002_PASS_EQUALITY.ets
/**
 * @id TYP_03_06_04_002_PASS_EQUALITY
 * @expect compile-pass
 * @section 3.6.4
 * @design boolean 相等运算 ==, !=
 * @note 正向用例：相等运算
 */
function testEquality(): void {
  let t: boolean = true
  let f: boolean = false

  let r1: boolean = t == t
  let r2: boolean = t != f
  let r3: boolean = t == f
}